# iceberg_demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  expanded-table-formats-comparison.md  log4j.properties  pyproject.toml  spark-shell.sh
airflow/: airflow.db
airflow/dags/: batch_writer_dag.py  ml_genai_writer_dag.py  ml_writer_dag.py  stream_writer_dag.py
src/iceberg_demo/: list_tables.py  load_sample_data.py  main.py  metadata_changes.py  partitioning.py  query_list_tables.py  scd_type2.py  schema_evolution.py  snapshot_diff.py  time_travel.py
src/iceberg_demo/features/: partitioning.py  scd_type2.py  schema_evolution.py  table_branching.py  time_travel.py
src/iceberg_demo/features/partition_evolution/: main.scala
src/iceberg_demo/ml/: gen_ai_issue.py  linear_regression.py
src/iceberg_demo/streaming/: consumer.py  structured_streaming.py
src/iceberg_demo/streaming/data/: streaming_records.parquet
src/iceberg_demo/streaming/data/checkpoints/: .metadata.crc  metadata
src/iceberg_demo/streaming/data/checkpoints/offsets/: .0.crc  0
src/iceberg_demo/streaming/data/checkpoints/sources/0/: .0.crc  0
src/iceberg_demo/utilities/: inspect_avro.py
src/project/: basic.py  display_table_rows.py  gen_ai_issue.py  ml_issue.py  query_table.py  scd_type2.py  setup_and_spark_job_dag.py  spark-shell.sh
src/project/streaming/: producer.py
