[project]
name = "iceberg-demo"
version = "0.1.0"
description = "Learning Iceberg"
authors = [
    {name = "Chanukya Pekala",email = "chanukya.pekala@gmail.com"}
]
readme = "README.md"
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyiceberg = "^0.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
