[project]
name = "iceberg-demo"
version = "0.1.0"
description = "Learning Iceberg"
authors = [
    {name = "Chanukya Pekala",email = "chanukya.pekala@gmail.com"}
]
readme = "README.md"
dependencies = [
    "apache-airflow (>=2.10.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "shell (>=1.0.1,<2.0.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "transformers (>=4.51.3,<5.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyiceberg = "^0.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
