[project]
name = "iceberg-demo"
version = "0.1.0"
description = "Learning Iceberg"
authors = [
    {name = "Chanukya Pekala",email = "chanukya.pekala@gmail.com"}
]
readme = "README.md"
packages = [
    {include = "iceberg_demo", from = "src"}
]
dependencies = [
    "apache-airflow (>=2.10.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "shell (>=1.0.1,<2.0.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "fastavro (>=1.10.0,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "openai (>=1.75.0,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyiceberg = "0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
